<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registrar_estudiante"
    android:background="#531EA0">

    <View
        android:id="@+id/img"
        android:layout_width="41dp"
        android:layout_height="39dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/atras"
        />

    <View
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="135dp"
        android:layout_marginTop="170dp"
        android:background="@drawable/cohete" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="134dp"
        android:layout_marginTop="315dp"
        android:fontFamily="@font/roboto_mono"
        android:gravity="center_horizontal"
        android:text="@string/registratusdatos"
        android:textColor="@color/white"
        android:textAppearance="@style/c_mo_deseas" />

    <EditText
        android:id="@+id/nombre_estudiante"
        android:layout_width="339dp"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="37dp"
        android:layout_marginTop="403dp"
        android:background="@drawable/edittext"
        android:drawableStart="@drawable/lapiz"
        android:drawablePadding="5dp"
        android:fontFamily="@font/roboto_mono"
        android:hint="@string/introducetunombre"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/apellido_estudiante"
        android:layout_width="339dp"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="37dp"
        android:layout_marginTop="445dp"
        android:background="@drawable/edittext"
        android:drawableStart="@drawable/lapiz"
        android:drawablePadding="5dp"
        android:fontFamily="@font/roboto_mono"
        android:hint="@string/introducetuapellido"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/correo_estudiante"
        android:layout_width="339dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="37dp"
        android:layout_marginTop="486dp"
        android:background="@drawable/edittext"
        android:drawableStart="@drawable/email"
        android:drawablePadding="5dp"
        android:ellipsize="end"
        android:fontFamily="@font/roboto_mono"
        android:hint="@string/introducetucorreo"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:singleLine="true"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/codigo_estudiante"
        android:layout_width="339dp"
        android:layout_height="39dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="37dp"
        android:layout_marginTop="531dp"
        android:background="@drawable/edittext"
        android:drawableStart="@drawable/candado"
        android:drawablePadding="5dp"
        android:ellipsize="end"
        android:fontFamily="@font/roboto_mono"
        android:hint="@string/introducetudocumento"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:singleLine="true"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/contraseña_estudiante"
        android:layout_width="339dp"
        android:layout_height="41.09dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="37dp"
        android:layout_marginTop="575dp"
        android:background="@drawable/edittext"
        android:drawableStart="@drawable/logokey"
        android:drawablePadding="5dp"
        android:ellipsize="end"
        android:fontFamily="@font/roboto_mono"
        android:hint="@string/Introducecontraseña"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:singleLine="true"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatButton

        android:id="@+id/btnregistro"
        android:layout_width="339dp"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="37dp"
        android:layout_marginTop="630dp"
        android:background="@drawable/boton2"
        android:backgroundTint="#ED417B"
        android:elevation="4dp"
        android:fontFamily="@font/roboto_mono"
        android:onClick="registrarse"
        android:text="@string/registrarse"
        android:textAllCaps="false"
        android:textColor="@color/white"

        />
    /*

    <EditText
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="Registro"
        android:textSize="25dp"/>

</RelativeLayout>