<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ingresar_admin"
    android:background="#531EA0">

    <View
        android:id="@+id/group"
        android:layout_width="50dp"
        android:layout_height="73.43dp"
        android:layout_marginStart="172dp"
        android:layout_marginTop="157dp"
        android:background="@drawable/bombillo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="170dp"
        android:layout_marginTop="244dp"
        android:fontFamily="@font/roboto_mono"
        android:gravity="center_horizontal"
        android:text="@string/entrar_en_m"
        android:textAppearance="@style/c_mo_deseas"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/admin_ingresar1"
        android:layout_width="339dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="34dp"
        android:layout_marginTop="356dp"
        android:background="@drawable/edittext"
        android:drawableStart="@drawable/logocorreo"
        android:drawablePadding="5dp"
        android:fontFamily="@font/roboto_mono"
        android:hint="Introduce tu Documento"
        android:paddingStart="10dp"
        android:textSize="15dp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/admin_ingresar2"
        android:layout_width="339dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="34dp"
        android:layout_marginTop="406dp"
        android:background="@drawable/edittext"
        android:drawableStart="@drawable/logocorreo"
        android:drawablePadding="5dp"
        android:fontFamily="@font/roboto_mono"
        android:hint="@string/admin_iniciar2"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btniniciaradmin"
        android:layout_width="339dp"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="34dp"
        android:layout_marginTop="455dp"
        android:background="@drawable/boton2"
        android:backgroundTint="#ED417B"
        android:elevation="4dp"
        android:fontFamily="@font/roboto_mono"
        android:onClick="iniciobuscar"
        android:text="@string/Iniciar_sesión"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/linkregistroadmin"
        android:layout_width="280dp"
        android:layout_height="36dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="67dp"
        android:layout_marginTop="670dp"
        android:clickable="true"
        android:fontFamily="@font/roboto_mono"
        android:gravity="center_horizontal"
        android:onClick="nuevoregistroadmin"
        android:text="@string/registrate"
        android:textColor="@color/white"
        tools:ignore="OnClick" />




</FrameLayout>