<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EADCFA"
    tools:context=".calificaciones_estudiantes">

    <androidx.cardview.widget.CardView

        android:layout_width="414dp"
        android:layout_height="98dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        app:cardBackgroundColor="#7846CC"
        >
        <View
            android:layout_width="441dp"
            android:layout_height="120dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="-12dp"
            android:layout_marginStart="-16dp"
            android:background="@drawable/Edubanner" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/puntaje_obt"
        android:layout_width="298dp"
        android:layout_height="21dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="125dp"
        android:fontFamily="@font/roboto_mono"
        android:gravity="top"
        android:text="@string/puntaje"
        android:textAppearance="@style/c_mo_deseas" />

    <androidx.cardview.widget.CardView
        android:layout_width="394dp"
        android:layout_height="189dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="165dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="20dp"

        >

        <View
            android:layout_width="394dp"
            android:layout_height="49dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/fondo_materias"
            android:backgroundTint="#FAA5C2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="148dp"
            android:layout_marginTop="11dp"
            android:gravity="top"
            android:text="@string/prueba1"
            android:textSize="20dp"
            android:textAppearance="@style/c_mo_deseas" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="104dp"
            android:fontFamily="@font/roboto_mono"
            android:gravity="top"
            android:text="@string/calificacion"
            android:textAppearance="@style/c_mo_deseas" />

        <View
            android:layout_width="84dp"
            android:layout_height="100dp"
            android:layout_marginStart="271dp"
            android:layout_marginTop="70dp"
            android:background="@drawable/imgprueba1" />


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="394dp"
        android:layout_height="189dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="365dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="20dp"

        >

        <View
            android:layout_width="394dp"
            android:layout_height="49dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/fondo_materias"
            android:backgroundTint="#A0E5EE" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="148dp"
            android:layout_marginTop="11dp"
            android:gravity="top"
            android:text="@string/prueba2"
            android:textSize="20dp"
            android:textAppearance="@style/c_mo_deseas" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="104dp"
            android:fontFamily="@font/roboto_mono"
            android:gravity="top"
            android:text="@string/calificacion"
            android:textAppearance="@style/c_mo_deseas" />

        <View
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="271dp"
            android:layout_marginTop="70dp"
            android:background="@drawable/imgprueba2" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="394dp"
        android:layout_height="189dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="565dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="20dp"

        >

        <View
            android:layout_width="394dp"
            android:layout_height="49dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/fondo_materias"
            android:backgroundTint="#D7C0EF" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="148dp"
            android:layout_marginTop="11dp"
            android:gravity="top"
            android:text="@string/prueba3"
            android:textSize="20dp"
            android:textAppearance="@style/c_mo_deseas" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="104dp"
            android:fontFamily="@font/roboto_mono"
            android:gravity="top"
            android:text="@string/calificacion"
            android:textAppearance="@style/c_mo_deseas" />

        <View
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="271dp"
            android:layout_marginTop="70dp"
            android:background="@drawable/imgprueba3" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="394dp"
        android:layout_height="189dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="765dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="20dp"

        >

        <View
            android:layout_width="394dp"
            android:layout_height="49dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/fondo_materias"
            android:backgroundTint="#FFE5F3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="148dp"
            android:layout_marginTop="11dp"
            android:gravity="top"
            android:text="@string/prueba4"
            android:textAppearance="@style/c_mo_deseas"
            android:textSize="20dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="104dp"
            android:fontFamily="@font/roboto_mono"
            android:gravity="top"
            android:text="@string/calificacion"
            android:textAppearance="@style/c_mo_deseas" />

        <View
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:layout_marginStart="251dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/imgprueba4" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="394dp"
        android:layout_height="189dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="965dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="20dp"

        >

        <View
            android:layout_width="394dp"
            android:layout_height="49dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/fondo_materias"
            android:backgroundTint="#FFB89F" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="148dp"
            android:layout_marginTop="11dp"
            android:gravity="top"
            android:text="@string/prueba5"
            android:textAppearance="@style/c_mo_deseas"
            android:textSize="20dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="104dp"
            android:fontFamily="@font/roboto_mono"
            android:gravity="top"
            android:text="@string/calificacion"
            android:textAppearance="@style/c_mo_deseas" />

        <View
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginStart="261dp"
            android:layout_marginTop="65dp"
            android:background="@drawable/imgprueba5" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="394dp"
        android:layout_height="189dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="1165dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="20dp"

        >

        <View
            android:layout_width="394dp"
            android:layout_height="49dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/fondo_materias"
            android:backgroundTint="#BFFFFF" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="148dp"
            android:layout_marginTop="11dp"
            android:gravity="top"
            android:text="@string/prueba6"
            android:textAppearance="@style/c_mo_deseas"
            android:textSize="20dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="104dp"
            android:fontFamily="@font/roboto_mono"
            android:gravity="top"
            android:text="@string/calificacion"
            android:textAppearance="@style/c_mo_deseas" />

        <View
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginStart="261dp"
            android:layout_marginTop="65dp"
            android:background="@drawable/imgprueba6" />
    </androidx.cardview.widget.CardView>




</RelativeLayout>